UX: fix reaction alignment in user stream items (#343)
Fixes the desktop alignment of reaction emojis following changes in #31122 in core.

--- a/assets/stylesheets/desktop/discourse-reactions.scss
+++ b/assets/stylesheets/desktop/discourse-reactions.scss
@@ -7,4 +7,8 @@
   nav.post-controls .show-replies {
     position: relative;
   }
+
+  .discourse-reactions-my-reaction {
+    margin: 0.75em 0 0 3.5em;
+  }
 }
